force-app/main/default/objects/Account/fields/School_Local_Government_Area__c.field-meta.xml
<CustomField>
    <fullName>School_Local_Government_Area__c</fullName>
    <label>School Local Government Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACT GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>ADELAIDE (C)</fullName>
            </value>
            <value>
                <fullName>ADELAIDE HILLS (DC)</fullName>
            </value>
            <value>
                <fullName>ALBANY (C)</fullName>
            </value>
            <value>
                <fullName>ALBURY (C)</fullName>
            </value>
            <value>
                <fullName>ALEXANDRINA (DC)</fullName>
            </value>
            <value>
                <fullName>ALICE SPRINGS (T)</fullName>
            </value>
            <value>
                <fullName>ALPINE (S)</fullName>
            </value>
            <value>
                <fullName>ANANGU PITJANTJATJARA (AC)</fullName>
            </value>
            <value>
                <fullName>ARARAT (RC)</fullName>
            </value>
            <value>
                <fullName>ARMADALE (C)</fullName>
            </value>
            <value>
                <fullName>ARMIDALE DUMARESQ (A)</fullName>
            </value>
            <value>
                <fullName>ASHBURTON (S)</fullName>
            </value>
            <value>
                <fullName>ASHFIELD (A)</fullName>
            </value>
            <value>
                <fullName>AUBURN (A)</fullName>
            </value>
            <value>
                <fullName>AUGUSTA-MARGARET RIVER (S)</fullName>
            </value>
            <value>
                <fullName>AURUKUN (S)</fullName>
            </value>
            <value>
                <fullName>Ballarat</fullName>
            </value>
            <value>
                <fullName>BALLARAT (C)</fullName>
            </value>
            <value>
                <fullName>BALLINA (A)</fullName>
            </value>
            <value>
                <fullName>BALONNE (S)</fullName>
            </value>
            <value>
                <fullName>BALRANALD (A)</fullName>
            </value>
            <value>
                <fullName>BANANA (S)</fullName>
            </value>
            <value>
                <fullName>BANKSTOWN (C)</fullName>
            </value>
            <value>
                <fullName>BANYULE (C)</fullName>
            </value>
            <value>
                <fullName>BARCALDINE (RSC)</fullName>
            </value>
            <value>
                <fullName>BARCOO (S)</fullName>
            </value>
            <value>
                <fullName>BARCOO (SC)</fullName>
            </value>
            <value>
                <fullName>BAROSSA (DC)</fullName>
            </value>
            <value>
                <fullName>BARUNGA WEST (DC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>