force-app/main/default/objects/Account/fields/School_Metro_Country__c.field-meta.xml
<CustomField>
    <fullName>School_Metro_Country__c</fullName>
    <label>School Metro/Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>