force-app/main/default/objects/Account/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <label>School Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catholic</fullName>
            </value>
            <value>
                <fullName>Child Care Centre</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Kindergarten</fullName>
            </value>
            <value>
                <fullName>PreSchool</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>