force-app/main/default/objects/Account/fields/Sent_Zest_Survey__c.field-meta.xml
<CustomField>
    <fullName>Sent_Zest_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Zest Survey</label>
    <type>Checkbox</type>
</CustomField>