force-app/main/default/objects/Account/fields/Services_Products_Provided__c.field-meta.xml
<CustomField>
    <fullName>Services_Products_Provided__c</fullName>
    <label>Services/Products Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product 1</fullName>
            </value>
            <value>
                <fullName>Product 2</fullName>
            </value>
            <value>
                <fullName>Service 1</fullName>
            </value>
            <value>
                <fullName>Service 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>