force-app/main/default/objects/Account/fields/Sign_Up_Source__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Source__c</fullName>
    <label>Sign Up Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sign_Up_Source</valueSetName>
    </valueSet>
</CustomField>