force-app/main/default/objects/Account/fields/Solicit_Code__c.field-meta.xml
<CustomField>
    <fullName>Solicit_Code__c</fullName>
    <label>Solicit Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>