force-app/main/default/objects/Account/fields/Sporting_Teams__c.field-meta.xml
<CustomField>
    <fullName>Sporting_Teams__c</fullName>
    <label>Sporting Teams</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFL - Adelaide Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - Brisbane Lions</fullName>
            </value>
            <value>
                <fullName>AFL - Carlton Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - Collingwood Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - Essendon Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - Fremantle Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - Geelong Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - Gold Coast Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - Greater Western Sydney Giants</fullName>
            </value>
            <value>
                <fullName>AFL - Hawthorn Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - Melbourne Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - North Melbourne Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - Port Adelaide Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - Richmond Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - St Kilda Football Club</fullName>
            </value>
            <value>
                <fullName>AFL - Sydney Swans</fullName>
            </value>
            <value>
                <fullName>AFL - West Coast Eagles</fullName>
            </value>
            <value>
                <fullName>AFL - Western Bulldogs</fullName>
            </value>
            <value>
                <fullName>AFL - Any team</fullName>
            </value>
            <value>
                <fullName>NRL - Broncos</fullName>
            </value>
            <value>
                <fullName>NRL - Bulldogs</fullName>
            </value>
            <value>
                <fullName>NRL - Cowboys</fullName>
            </value>
            <value>
                <fullName>NRL - Dragons</fullName>
            </value>
            <value>
                <fullName>NRL - Eels</fullName>
            </value>
            <value>
                <fullName>NRL - Raiders</fullName>
            </value>
            <value>
                <fullName>NRL - Panthers</fullName>
            </value>
            <value>
                <fullName>NRL - Rabbitohs</fullName>
            </value>
            <value>
                <fullName>NRL - Roosters</fullName>
            </value>
            <value>
                <fullName>NRL - Sea Eagles</fullName>
            </value>
            <value>
                <fullName>NRL - Sharks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>