force-app/main/default/objects/Account/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>Catholic</fullName>
            </value>
            <value>
                <fullName>Child Care Centre</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Kindergarten</fullName>
            </value>
            <value>
                <fullName>Pre-school</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Council</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Former Patient</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Bereaved Family</fullName>
            </value>
            <value>
                <fullName>Former Offspring Family</fullName>
            </value>
            <value>
                <fullName>Offspring Family</fullName>
            </value>
            <value>
                <fullName>Restricted Family</fullName>
            </value>
            <value>
                <fullName>Offspring Bereaved Family</fullName>
            </value>
            <value>
                <fullName>Graduating Patient Family</fullName>
            </value>
            <value>
                <fullName>Graduating Offspring Family</fullName>
            </value>
            <value>
                <fullName>Former Bereaved</fullName>
            </value>
            <value>
                <fullName>Former Offspring Bereaved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>