force-app/main/default/objects/Account/fields/Supporter_ID_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Supporter_ID_Auto_Number__c</fullName>
    <displayFormat>A{00000}</displayFormat>
    <label>Supporter ID - Auto Number</label>
    <type>AutoNumber</type>
</CustomField>