force-app/main/default/objects/Account/fields/temp_new_RP_ID__c.field-meta.xml
<CustomField>
    <fullName>temp_new_RP_ID__c</fullName>
    <label>temp_new_RP_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>