force-app/main/default/objects/Account/fields/Test_Image_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Test_Image_Permissions__c</fullName>
    <label>Test Image Permissions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>