force-app/main/default/objects/Account/fields/Third_Party_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Referrer__c</fullName>
    <label>Third Party Referrer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>