force-app/main/default/objects/Account/fields/Total_Active_Family_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Family_Members__c</fullName>
    <label>Total Active Family Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>