force-app/main/default/objects/Account/fields/Total_Rec_Program_Attended__c.field-meta.xml
<CustomField>
    <fullName>Total_Rec_Program_Attended__c</fullName>
    <description>Roll up of family attendances</description>
    <label>Total Rec Program Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>