force-app/main/default/objects/Account/fields/Total_Retreat_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Retreat_Bookings__c</fullName>
    <description>Number of Retreat Booking where Status = Completed</description>
    <inlineHelpText>Number of retreats family has attended</inlineHelpText>
    <label>Total Retreat Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>