force-app/main/default/objects/Account/fields/Total_Unsuccessful_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Unsuccessful_Last_12_Months__c</fullName>
    <description>Roll up on family attendance where status = unsuccessful in last 12 months only</description>
    <label>Unsuccessful Last 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>