force-app/main/default/objects/Account/fields/Treatment_Other_Location__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Other_Location__c</fullName>
    <label>Treatment Other Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SQLD</fullName>
            </value>
            <value>
                <fullName>NCLE</fullName>
            </value>
            <value>
                <fullName>SYD</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>