force-app/main/default/objects/Account/fields/Unsuccessful_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Unsuccessful_Last_12_Months__c</fullName>
    <inlineHelpText>Number of times a family has been made unsuccessful to an event in last 12 months.</inlineHelpText>
    <label>Unsuccessful Last 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>