force-app/main/default/objects/Account/fields/Vendor_Rating__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Rating__c</fullName>
    <description>Vendor rating out of 100.</description>
    <inlineHelpText>Vendor rating out of 100.</inlineHelpText>
    <label>Vendor Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>