force-app/main/default/objects/Account/fields/Volunteer_Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Registration_URL__c</fullName>
    <formula>$Setup.My_Camp_Quality_Settings__c.Community_Base_URL__c &amp; &quot;/portalRegister?a=&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Registration URL</label>
    <type>Text</type>
</CustomField>