force-app/main/default/objects/Account/fields/Volunteer_Registrations_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Registrations_Remaining__c</fullName>
    <formula>IF(AND(NOT(ISNULL(Maximum_Volunteers__c)), Maximum_Volunteers__c &gt; 0), 
  Maximum_Volunteers__c - Number_of_Volunteers__c,
  0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Registrations Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>