force-app/main/default/objects/Account/fields/YearsWithCampQuality__c.field-meta.xml
<CustomField>
    <fullName>YearsWithCampQuality__c</fullName>
    <formula>(DateVALUE(NOW()) - Start_Date__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YearsWithCampQuality</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>