force-app/main/default/objects/Account/fields/Youngest_Child_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Youngest_Child_Birthdate__c</fullName>
    <label>Youngest Child Birthdate</label>
    <type>Date</type>
</CustomField>