force-app/main/default/objects/Account/recordTypes/Branch_Office.recordType-meta.xml
<RecordType>
    <fullName>Branch_Office</fullName>
    <active>false</active>
    <label>Branch Office</label>
</RecordType>