force-app/main/default/objects/Account/recordTypes/Hospital.recordType-meta.xml
<RecordType>
    <fullName>Hospital</fullName>
    <active>false</active>
    <label>Hospital</label>
</RecordType>