force-app/main/default/objects/Account/validationRules/Do_Not_Accept_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Accept_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Do_Not_Accept_Donations__c = TRUE, ISBLANK(Do_Not_Accept_Donations_Reasons__c))</errorConditionFormula>
    <errorMessage>Please provide a reason for not accepting donations</errorMessage>
</ValidationRule>