force-app/main/default/objects/Account/validationRules/ImagePermisions.validationRule-meta.xml
<ValidationRule>
    <fullName>ImagePermisions</fullName>
    <active>false</active>
    <errorConditionFormula>if( media_opt_in_take_video_photos__c , 
if ( 
OR(media_opt_in_share_participants__c , Media_Opt_in_Public_Sharing__c,  Media_permission_Public_2019__c,  Media_permission_corporate_2019__c ),false,true)
, false)</errorConditionFormula>
    <errorMessage>Please select at least one image sharing option.</errorMessage>
</ValidationRule>