force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Priority__c</columns>
    <columns>Branch_Office__c</columns>
    <columns>Diagnosis_Date__c</columns>
    <columns>Children_under_13__c</columns>
    <columns>Patients_in_Family__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Family_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Mobile_Phone__c</columns>
    <columns>Email__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Family,Account.Organisation,Account.School</value>
    </filters>
    <label>All Accounts</label>
</ListView>