force-app/main/default/objects/Account/listViews/Birch_Carroll_Coyle.listView-meta.xml
<ListView>
    <fullName>Birch_Carroll_Coyle</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>startsWith</operation>
        <value>Birch Carroll</value>
    </filters>
    <label>Birch Carroll &amp; Coyle</label>
</ListView>