force-app/main/default/objects/Account/listViews/Changed_By_Portal_User.listView-meta.xml
<ListView>
    <fullName>Changed_By_Portal_User</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Modified_By_Community_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Changed By Portal User</label>
</ListView>