force-app/main/default/objects/Account/listViews/Families_Graduating.listView-meta.xml
<ListView>
    <fullName>Families_Graduating</fullName>
    <columns>Branch_Office__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Family_Type__c</columns>
    <columns>AnnotationText__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Diagnosis_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Children_under_13__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Family_Type__c</field>
        <operation>equals</operation>
        <value>Patient,Offspring Parent Patient,Bereaved Family,Offspring Family,Restricted Family</value>
    </filters>
    <label>Families Graduating</label>
</ListView>