force-app/main/default/objects/Account/listViews/Lions_Clubs.listView-meta.xml
<ListView>
    <fullName>Lions_Clubs</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Lions Club</value>
    </filters>
    <label>Lions Clubs</label>
</ListView>